# pt-chat

./: LICENSE  README.md  docker-compose.yml
backend/: .development.env  .gitignore  Dockerfile  README.md  config.py  consts.py  docker-compose.yml  main.py  pyproject.toml  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 39d273a32e53_initial_schema.py  be0f6cc37c39_room_user.py
backend/api/: dependencies.py
backend/api/graphql/: common.py  mutations.py  queries.py  schema.py  subscriptions.py
backend/api/routes/: room.py  user.py
backend/db/: session.py
backend/models/: __init__.py  base.py  message.py  room.py  user.py
docs/: arch.drawio
frontend/: Dockerfile  codegen.yml  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  apolloClient.ts  config.ts  index.css  main.tsx  types.ts
frontend/src/components/: NameModal.tsx  Toast.tsx
frontend/src/graphql/: mutations.graphql  queries.graphql  subscriptions.graphql
frontend/src/hooks/: useJoinRoom.ts  useLeaveRoom.ts  useMe.ts  useReceiveMessage.ts  useRoom.ts  useRoomMessages.ts  useRoomUsers.ts  useUserEvent.ts
frontend/src/pages/: RoomDetailPage.tsx  RoomsPage.tsx  SigninPage.tsx
frontend/src/utils/: getToken.ts
